@@ -2,6 +2,7 @@ package com.smh.club.api.rest.domain.repos;
 
 import com.smh.club.api.rest.domain.entities.*;
 import io.zonky.test.db.AutoConfigureEmbeddedDatabase;
+import java.util.Comparator;
 import java.util.List;
 import org.instancio.Instancio;
 import org.instancio.junit.InstancioExtension;
@@ -82,7 +83,7 @@ public class MemberIntegrationTests {
     }
 
     @Test
-    public void save_middleName_is_null_does_not_throws() {
+    public void save_middleName_is_null_does_not_throw() {
         // setup
         var member = createEntity();
         member.setMiddleName(null);
@@ -132,22 +133,6 @@ public class MemberIntegrationTests {
     }
 
     @ParameterizedTest
-    @ValueSource(ints = {5,20,50})
-    public void get_memberNumbers_matches(int size) {
-        // setup
-        var members = memberRepo.saveAll(createList(size));
-        var numbers = members.stream().map(MemberEntity::getMemberNumber).toList();
-        var highest = members.stream().map(MemberEntity::getMemberNumber).max(Integer::compareTo).orElseThrow();
-
-        // execute
-        var ret = memberRepo.findByMemberNumberGreaterThanEqualAndMemberNumberLessThanEqual(0, highest);
-        var vals = ret.stream().map(MemberNumberOnly::getMemberNumber).toList();
-
-        // assert
-        vals.forEach(v -> assertTrue(numbers.contains(v)));
-    }
-
-    @ParameterizedTest
     @ValueSource(ints = {5, 10, 20})
     public void save_with_children_success(int size) {
         // setup
@@ -171,10 +156,10 @@ public class MemberIntegrationTests {
 
         // verify
         assertFalse(memberRepo.existsById(member.getId()));
-        assertFalse(addressRepo.existsById(member.getAddresses().get(0).getId()));
-        assertFalse(emailRepo.existsById(member.getEmails().get(0).getId()));
-        assertFalse(phoneRepo.existsById(member.getPhones().get(0).getId()));
-        assertFalse(renewalsRepo.existsById(member.getRenewals().get(0).getId()));
+        assertFalse(addressRepo.existsById(member.getAddresses().getFirst().getId()));
+        assertFalse(emailRepo.existsById(member.getEmails().getFirst().getId()));
+        assertFalse(phoneRepo.existsById(member.getPhones().getFirst().getId()));
+        assertFalse(renewalsRepo.existsById(member.getRenewals().getFirst().getId()));
     }
 
     @ParameterizedTest
@@ -182,10 +167,10 @@ public class MemberIntegrationTests {
     public void delete_children_save_member(int size) {
         // setup
         var member = memberRepo.saveAllAndFlush(createListWithChildren(size)).get((int)Math.ceil(size / 2d));
-        var address = member.getAddresses().get(0);
-        var email = member.getEmails().get(0);
-        var phone = member.getPhones().get(0);
-        var renewal = member.getRenewals().get(0);
+        var address = member.getAddresses().getFirst();
+        var email = member.getEmails().getFirst();
+        var phone = member.getPhones().getFirst();
+        var renewal = member.getRenewals().getFirst();
 
         member.removeAddress(address);
         member.removeEmail(email);
@@ -218,6 +203,132 @@ public class MemberIntegrationTests {
         // verify
         assertTrue(ret.isPresent());
         assertEquals(member, ret.get());
+    }
+
+    @ParameterizedTest
+    @ValueSource(ints = {10, 20, 30})
+    public void should_return_last_used_memberNumber_when_only_one_is_missing(int size) {
+        // setup
+        var entities = createList(size);
+        var idx = 1;
+        for(var member : entities) {
+            member.setMemberNumber(idx++);
+        }
+        var expected = entities.get(size/2).getMemberNumber();
+        entities.remove(entities.get(size/2));
+        memberRepo.saveAllAndFlush(entities);
+
+        // execute
+        var actual = memberRepo.findLastUsedMemberNumberBeforeGap();
+
+        assertTrue(actual.isPresent());
+        assertEquals(expected, actual.get());
+    }
+
+    @Test
+    public void should_return_highest_used_memberNumber_when_none_are_missing() {
+        // setup
+        var entities = createList(10);
+        var idx = 1;
+        for(var member : entities) {
+            member.setMemberNumber(idx++);
+        }
+        var expected = idx;
+        memberRepo.saveAllAndFlush(entities);
+
+        // execute
+        var actual = memberRepo.findLastUsedMemberNumberBeforeGap();
+
+        assertTrue(actual.isPresent());
+        assertEquals(expected, actual.get());
+    }
+
+    @Test
+    public void should_return_highest_used_memberNumber_when_first_n_are_missing_missing() {
+        // setup
+        var entities = createList(10);
+        var idx = 1;
+        for(var member : entities) {
+            member.setMemberNumber(idx++);
+        }
+        entities.removeFirst();
+        entities.removeFirst();
+        entities.removeFirst();
+
+        var expected = idx;
+
+        memberRepo.saveAllAndFlush(entities);
+
+        // execute.
+        var actual = memberRepo.findLastUsedMemberNumberBeforeGap();
+
+        assertTrue(actual.isPresent());
+        assertEquals(expected, actual.get());
+    }
+
+    @Test
+    public void find_last_used_should_return_null_when_table_is_empty() {
+        // execute
+
+        var result = memberRepo.findLastUsedMemberNumberBeforeGap();
+
+        // verify
+        assertTrue(result.isEmpty());
+    }
+
+    @ParameterizedTest
+    @ValueSource(ints = {10, 20, 30})
+    public void should_return_min_memberNumber(int size) {
+        // setup
+        var entities = createList(size);
+        var min = entities.stream().min(Comparator.comparingInt(MemberEntity::getMemberNumber));
+        memberRepo.saveAllAndFlush(entities);
+
+        // execute
+        var result = memberRepo.findMinMemberNumber();
+
+        // verify
+        assertTrue(min.isPresent());
+        assertTrue(result.isPresent());
+        assertEquals(min.get().getMemberNumber(), result.get());
+    }
+
+    @Test
+    public void find_min_memberNumber_should_return_null_when_table_is_empty() {
+        // execute
+        var result = memberRepo.findMinMemberNumber();
+
+        // verify
+        assertTrue(result.isEmpty());
+    }
+
+    @ParameterizedTest
+    @ValueSource(ints = {10, 20, 30})
+    public void should_return_max_memberNumber(int size) {
+        // setup
+        var entities = createList(size);
+        var idx = 1;
+        for(var member : entities) {
+            member.setMemberNumber(idx++);
+        }
+        memberRepo.saveAllAndFlush(entities);
+        var expected = --idx;
+
+        // execute
+        var actual = memberRepo.findMaxMemberNumber();
+
+        // verify
+        assertTrue(actual.isPresent());
+        assertEquals(expected, actual.get());
+    }
+
+    @Test
+    public void find_max_memberNumber_should_return_null_when_table_is_empty() {
+        // execute
+        var result = memberRepo.findMaxMemberNumber();
+
+        // verify
+        assertTrue(result.isEmpty());
     }
 
     private MemberEntity createEntity() {
